Fixed input's font size and icons position on smaller screens. Added hover animation for submit input.

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ main::before {
     /* opacity: 0; */
 }
 .section-heading {
-    font-size: 7vh;
+    font-size: 6vh;
     line-height: 1;
 }
 .tab-heading,
@@ -564,7 +564,7 @@ input[type="tel"], .input-file + label{
     border: 1px solid #000000;
     max-width: 260px;
     width: 100%;
-    font-size: 2vh;
+    font-size: 18px;
     padding: 18px 18px 18px 52px;
     /* margin-bottom: 30px; */
 }
@@ -598,14 +598,21 @@ input[type="tel"], .input-file + label{
 input[type="submit"] {
     max-width: 260px;
     width: 100%;
-    font-size: 2vh;
+    font-size: 18px;
     letter-spacing: 3px;
     font-weight: bold;
     padding: 18px;
     background-color: #FF8100;
     color: #ffffff;
-    border: none;
+    border: 3px solid #FF8100;
     cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+input[type="submit"]:focus,
+input[type="submit"]:active,
+input[type="submit"]:hover {
+    background-color: transparent;
+    color: #FF8100;
 }
 input[type="text"]:focus,
 input[type="text"]:active,
@@ -670,7 +677,7 @@ input.privacy-check {
     color: #000000;
 }
 input.privacy-check + span {
-    font-size: 2vh;
+    font-size: 18px;
 }
 input.input-file {
     max-width: 100%;
@@ -1241,6 +1248,7 @@ span.wpcf7-not-valid-tip {
         padding: 10px 32px 10px 10px;
         background-size: 13px;
         background-position: right 10px top 15px;
+        font-size: 18px;
     }
     textarea {
         height: 150px;
@@ -1311,16 +1319,20 @@ span.wpcf7-not-valid-tip {
         padding-right: 5vw;
     }
     input.input-name {
-        background-position: left 14px top 11px;
+        background-position: left 14px top 15px;
+        background-size: 14px;
     }
     input.input-mail {
-        background-position: left 14px top 12px;
+        background-position: left 14px top 18px;
+        background-size: 14px;
     }
     input.input-phone {
-        background-position: left 14px top 11px;
+        background-position: left 14px top 16px;
+        background-size: 14px;
     }
     .input-file + label {
-        background-position: left 14px top 10px;
+        background-position: left 14px top 15px;
+        background-size: 14px;
     }
 }
 @media(min-width:768px) and (max-width:991px) {
@@ -1400,7 +1412,7 @@ span.wpcf7-not-valid-tip {
     input[type="email"],
     input[type="tel"],
     .input-file + label {
-        font-size: 2.5vw;
+        font-size: 18px;
         padding: 14px 14px 14px 40px;
     }
     .wpcf7-form-control-wrap {
@@ -1412,8 +1424,9 @@ span.wpcf7-not-valid-tip {
         background-position: right 12px top 22px;
     }
     .modal select {
-        font-size: 2.5vw;
+        font-size: 18px;
         padding: 14px;
+        background-position: right 13px top 21px;
     }
     input[type="submit"] {
         padding: 14px;
@@ -1422,20 +1435,24 @@ span.wpcf7-not-valid-tip {
         font-size: 7.5vw;
     }
     input.input-mail {
-        background-position: left 13px top 19px
+        background-position: left 13px top 19px;
+        background-size: 16px;
     }
     input.input-phone {
-        background-position: left 14px top 18px;
+        background-position: left 13px top 18px;
+        background-size: 16px;
     }
     input.input-name {
-        background-position: left 14px top 18px;
+        background-position: left 13px top 16px;
+        background-size: 16px;
     }
     .tab-subheading {
         font-size: 4vw;
     }
     .input-file + label {
         margin-bottom: 0 !important;
-        background-position: left 13px top 18px;
+        background-position: left 13px top 19px;
+        background-size: 16px;
     }
     .contact-list-item {
         font-size: 2.7vw;
@@ -1522,32 +1539,36 @@ span.wpcf7-not-valid-tip {
     }
     .modal select {
         background-position: right 13px top 30px;
+        font-size: 24px;
     }
     input[type="text"], input[type="email"], input[type="tel"], .input-file + label, input[type="submit"] {
         max-width: 80%;
     }
-    input[type="text"], input[type="email"], input[type="tel"], .input-file + label, textarea {
-        font-size: 2.5vw;
+    input[type="text"], input[type="email"], input[type="tel"], .input-file + label, textarea, input[type="submit"] {
+        font-size: 24px;
     }
     input.input-name {
         background-size: 18px;
-        background-position: left 20px top 24px;
+        background-position: left 19px top 23px;
     }
     input.input-phone {
-        background-size: 20px;
-        background-position: left 20px top 25px;
+        background-size: 18px;
+        background-position: left 19px top 25px;
     }
     input.input-mail {
-        background-size: 20px;
-        background-position: left 20px top 28px;
+        background-size: 18px;
+        background-position: left 19px top 27px;
     }
     .input-file + label {
-        background-size: 20px;
-        background-position: left 20px top 24px;
+        background-size: 18px;
+        background-position: left 19px top 24px;
     }
     .modal .wpcf7-form-control-wrap.input-info,
     textarea {
-        height: 394px;
+        height: 386px;
+    }
+    input.privacy-check + span {
+        font-size: 24px;
     }
 }
 
